--- a/assets/css/nav.component.css
+++ b/assets/css/nav.component.css
@@ -6,7 +6,7 @@
 
 .navbar-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 0.2 rem;
     margin: auto;
