--- a/pages/homepage/assets/css/carousel.css
+++ b/pages/homepage/assets/css/carousel.css
@@ -3,7 +3,7 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1550px;
   margin: 0 auto;
 }
 
@@ -31,6 +31,10 @@
 
 .carousel {
   width: 100%;
+}
+
+.carousel-item {
+    transition: opacity 1.5 ease-in-out;
 }
 .carousel-item img {
     object-fit: cover;
