--- a/pages/store/assets/css/store.css
+++ b/pages/store/assets/css/store.css
@@ -77,7 +77,7 @@ body {
   background: url('/pages/store/assets/img/cartBG.png');
   background-repeat: repeat-y;
   background-size: cover;
-  background-position: center top;
+  background-position: center;
   opacity: 0.9;
   z-index: 0;
   border-radius: 10px;
@@ -122,13 +122,33 @@ body {
   color: black;
 }
 
-/* Products Grid */
 .products-grid {
   flex: 1;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  padding: 30px;
+  border-radius: 12px;
+  position: relative;
+  overflow: hidden;
+  padding: 50px;
+}
 
+.products-grid::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: url('/pages/store/assets/img/menuBG.png') center top no-repeat;
+  background-size: cover;
+  background-repeat: repeat-y;
+  opacity: 0.9;
+  z-index: 0;
+  border-radius: 12px;
+}
+
+.products-grid > * {
+  position: relative;
+  z-index: 1;
 }
 
 .product-card {
