--- a/pages/aboutUs/assets/css/aboutus.css
+++ b/pages/aboutUs/assets/css/aboutus.css
@@ -2,7 +2,6 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-
 }
 
 .aboutus-container {
@@ -32,7 +31,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(11,6,6,0.7), rgba(30,15,15,0.7)), url(/pages/aboutUs/assets/img/underdark.jpg);
+    background: linear-gradient(rgba(11,6,6,0.7), rgba(30,15,15,0.7)), url(../img/underdark.jpg);
     background-size: cover;
     background-position: center;
     z-index: 1;
@@ -129,7 +128,7 @@ body {
     width: 100vw;
     margin-left: calc(-50vw + 50%);
     padding: 4rem 0;
-    background: #f3e9d2 url('/pages/aboutUs/assets/img/parchment-bg.jpg') center/cover;
+    background: #f3e9d2 url('../img/parchment-bg.jpg') center/cover;
     position: relative;
     z-index: 2;
     box-shadow: 0 4px 20px rgba(0,0,0,0.2);
@@ -137,6 +136,57 @@ body {
     border-bottom: 1px solid #d4af37;
 }
 
+.forge-container {
+    background: linear-gradient(rgba(64, 28, 28, 0.9), rgba(65, 43, 43, 0.389)),
+    url('../img/stone_bg.png');
+    background-size: cover;
+    border: 3px #d4af37;
+    padding: 3rem 2rem;
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+    box-shadow: 0 0 20px rgba(212,175,55,0.2);
+}
+
+.ore-divider {
+    height: 2px;
+    background: linear-gradient(to right,
+    transparent,
+    #d4af37 20%,
+    #a52a2a 50%,
+    #d4af37 80%,
+    transparent);
+    margin: 1rem auto 2rem;
+    width: 60%;
+}
+
+.forge-title {
+    font-family: 'MedievalSharp', cursive;
+    color: #d4af37;
+    text-align: center;
+    font-size: 2.2rem;
+    letter-spacing: 2px;
+    margin-bottom: 0.5rem;
+}
+
+.forge-text {
+    color: #f0e6d2;
+    line-height: 1.8;
+    text-align: justify;
+    position: relative;
+    padding: 0 1rem;
+}
+
+.mining-pick {
+    position: absolute;
+    bottom: -1.25rem;
+    right: 1.25rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    opacity: 0.7;
+    font-size: 1em;
+    background: url('../img/stone_bg.jpg') center/contain no-repeat;
+}
 .about-service,
 .about-team {
     display: flex;
