--- a/pages/aboutUs/assets/css/aboutus.css
+++ b/pages/aboutUs/assets/css/aboutus.css
@@ -177,29 +177,18 @@ body {
     padding: 0 1rem;
 }
 
-.mining-pick {
-    position: absolute;
-    bottom: -1.25rem;
-    right: 1.25rem;
-    width: 2.5rem;
-    height: 2.5rem;
-    opacity: 0.7;
-    font-size: 1em;
-    background: url('../img/stone_bg.jpg') center/contain no-repeat;
-}
-.about-service,
 .about-team {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem;
-    border: 1px solid purple;
-    border-radius: 10px;
 }
 
 .about-service {
-    background: gray;
-    text-align: center;
+    padding: 2rem;
+    background: linear-gradient(rgba(64, 28, 28, 0.9), rgba(41, 29, 29, 0.818))
+    ,url('../img/lava.jpg');
+    background-size: cover;
 }
 
 .about-service p {
