--- a/pages/aboutUs/assets/css/aboutus.css
+++ b/pages/aboutUs/assets/css/aboutus.css
@@ -211,7 +211,7 @@ body {
     color: #d4af37;
     font-size: 1.8rem;
     letter-spacing: 1rem;
-    margin: 1rem 0;
+    margin-left: 1rem;
 }
 
 .miner-grid {
@@ -246,7 +246,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 15%;
     border: 3px solid #d4af37;
     filter: sepia(30%) brightness(90%) contrast(110%);
 }
