--- a/pages/store/assets/css/store.css
+++ b/pages/store/assets/css/store.css
@@ -80,7 +80,7 @@ body {
   padding: 0;
   border: none;
   box-shadow: none;
-  overflow-y: scroll;
+  
 }
 
 .cart-box h2,
@@ -91,11 +91,17 @@ body {
   color: #5a4231;
 }
 
-.cart-box::-webkit-scrollbar {
+#cart-items{
+  overflow-y: scroll;
+  min-height: 250px;
+  max-height: 250px;
+}
+
+#cart-items::-webkit-scrollbar {
   width: 13px;
 }
 
-.cart-box::-webkit-scrollbar-track {
+#cart-items::-webkit-scrollbar-track {
   background-color: #38301d;
 }
 
@@ -131,6 +137,32 @@ body {
   margin-top: 10px;
   color: #3a9c36;
 }
+
+.cart-buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.btn-cancel {
+  
+}
+
+.btn-cancel button{
+  background: #5f4926;
+  border: none;
+  color: black;
+  padding: 8px 12px;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn-cancel button:hover {
+  background: #a3551e;
+}
+
 
 .products-image-wrapper {
   background-image: url('/pages/store/assets/img/menuBG.png');
